--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<center>
-<h1>AllValues</h1>
-<p>Nowy, lepszy test polityczny.</p>
-</center>
+<!doctype html>
+<html lang="pl">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+</head>
+
+<body>
+  <center>
+    <h1>AllValues</h1>
+    <p>Nowy, lepszy test polityczny.</p>
+  </center>
+</body>
+<html>
