--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" type="text/css" href="bootstrap-grid.css" />
   <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="bootstrap-grid.min.css" />
-  <link rel="stylesheet" type="text/css" href="bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="bootstrap-reboot.css" />
+  <link rel="stylesheet" type="text/css" href="bootstrap-reboot.min.css" />
 </head>
 
 <body>
