--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
   <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="bootstrap-reboot.css" />
   <link rel="stylesheet" type="text/css" href="bootstrap-reboot.min.css" />
+  <link rel="stylesheet" type="text/css" href="extra_styles.css" />
 </head>
 
 <body>
-  <center>
-    <h1>AllValues</h1>
-    <p>Nowy, lepszy test polityczny.</p>
-  </center>
+  <div class="topnav">
+    <a href="#home">Home</a>
+  </div>
+  <div class="heading">
+    <center>
+      <h1>AllValues</h1>
+      <p>Nowy, lepszy test polityczny.</p>
+    </center>
+  </div>
 </body>
 <html>
