--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="pl">
 <head>
+  <title>AllValues</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <link rel="stylesheet" type="text/css" href="Styles/bootstrap.css" />
   <link rel="stylesheet" type="text/css" href="Styles/bootstrap-grid.css" />
