--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
   <div class="heading">
     <center>
       <h1>Nie znaleziono strony!</h1>
-      <p>Sprawdź poprawność adresu lub <a href="/index.html">wróć na stronę główną</a>.</p>
+      <p>Sprawdź poprawność adresu lub <a href="/all-values">wróć na stronę główną</a>.</p>
     </center>
   </div>
 </body>
