--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
   <div class="topnav">
     <a href="#home">Home</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
   </div>
   <div class="heading">
     <center>
