--- a/404.html
+++ b/404.html
@@ -16,7 +16,10 @@
 
 <body>
   <div class="topnav">
-    <a href="#home">Home</a>
+    <a href="/all-values">Strona główna</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
   </div>
   <div class="heading">
     <center>
