--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
     <a href="/all-values">Strona główna</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
-  </a>
+    </a>
   </div>
   <div class="heading">
     <center>
       <h1>AllValues</h1>
       <p>Nowy, lepszy test polityczny.</p>
+    </center>
+  </div>
+  <div class="panel">
+    <center>
+      <input type="button">Test uproszczony (50 pytań)</input>
+      <input type="button">Test pełny (200 pytań)</input>
     </center>
   </div>
 </body>
