--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
   </div>
   <div class="panel">
     <center>
-      <input type="button">Test uproszczony (50 pytań)</input>
-      <input type="button">Test pełny (200 pytań)</input>
+      <button type="button">Test uproszczony (50 pytań)</button>
+      <br/>
+      <button type="button">Test pełny (200 pytań)</button>
     </center>
   </div>
 </body>
