--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   </div>
   <div class="panel">
     <center>
-      <button type="button" class="start-button">Test uproszczony (50 pytań)</button>
+      <div class="start-button"><button type="button" class="start-button">Test uproszczony (50 pytań)</button></div>
       <br/>
-      <button type="button" class="start-button">Test pełny (200 pytań)</button>
+      <div class="start-button"><button type="button" class="start-button">Test pełny (200 pytań)</button></div>
     </center>
   </div>
 </body>
