Update and rename rules.html to rules_short.html

--- a/rules_short.html
+++ b/rules_short.html
@@ -28,7 +28,7 @@
     Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane.
     </p>
     <br>
-    <button type="button" onclick="location.href='quiz.html';">Rozumiem, chcę przejść do testu.</button>
+    <button type="button" onclick="location.href='quiz_short.html';">Rozumiem, chcę przejść do testu.</button>
     <br>
     <button type="button" onclick="location.href='all-values';">Rozumiem, chcę przejść do testu.</button>
     <center>
