--- a/rules_short.html
+++ b/rules_short.html
@@ -28,9 +28,9 @@
     Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane.
     </p>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='quiz_short.html';">Rozumiem, chcę przejść do testu.</button></div>
+    <div class="start-button"><button type="button" onclick="location.href='quiz_short.html';" style="{ background-color: #bbff99; }">Rozumiem, chcę przejść do testu.</button></div>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='all-values';">Rezygnuję, zabierz mnie stąd.</button></div>
+    <div class="start-button"><button type="button" onclick="location.href='all-values';" style="{ background-color: #ff6666; }">Rezygnuję, zabierz mnie stąd.</button></div>
     <center>
   </div>
 </body>
