--- a/rules_long.html
+++ b/rules_long.html
@@ -30,7 +30,7 @@
     <br>
     <div class="start-button"><button type="button" onclick="location.href='quiz_long.html';" style="{ background-color: #bbff99; }">Rozumiem, chcę przejść do testu.</button></div>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='all-values';" style="{ background-color: #ff6666; }">Rezygnuję, zabierz mnie stąd.</button></div>
+    <div class="start-button"><button type="button" onclick="location.href='https://all-values.github.io/all-values';" style="{ background-color: #ff6666; }">Rezygnuję, zabierz mnie stąd.</button></div>
     <center>
   </div>
 </body>
