--- a/quiz_short.html
+++ b/quiz_short.html
@@ -22,7 +22,7 @@
     <i class="fa fa-bars"></i>
     </a>
   </div>
-  <div class="ruleset">
+  <div>
     <h2 style="text-align:center;" id="question-number"></h2>
     <p class="question" id="question-text" style="background-color: #e6f3ff;"></p>
     <button class="button" onclick="next_question( 1.0)">Zdecydowanie się zgadzam</button> <br>
