--- a/quiz_short.html
+++ b/quiz_short.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="Styles/bootstrap-reboot.min.css" />
   <link rel="stylesheet" type="text/css" href="Styles/extra_styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script type="application/javascript" src="questions_short.js">
+  <script type="application/javascript" src="questions_short.js"></script>
 </head>
 
 <body>
@@ -43,11 +43,11 @@
     var prev_answer = null;
     init_question();
     for (var i = 0; i < questions.length; i++) {
-        max_econ += Math.abs(questions[i].effect.econ)
-        max_dipl += Math.abs(questions[i].effect.dipl)
-        max_govt += Math.abs(questions[i].effect.govt)
-        max_scty += Math.abs(questions[i].effect.scty)
-        max_scty += Math.abs(questions[i].effect.revo)
+        max_econ += Math.abs(questions[i].effect.econ);
+        max_dipl += Math.abs(questions[i].effect.dipl);
+        max_govt += Math.abs(questions[i].effect.govt);
+        max_scty += Math.abs(questions[i].effect.scty);
+        max_scty += Math.abs(questions[i].effect.revo);
     }
     function init_question() {
         document.getElementById("question-text").innerHTML = questions[qn].question;
