--- a/quiz_short.html
+++ b/quiz_short.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="Styles/bootstrap-reboot.min.css" />
   <link rel="stylesheet" type="text/css" href="Styles/extra_styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script type="application/javascript" src="questions_short.js"></script>
+  <script type="application/javascript" src="Scripts/questions_short.js"></script>
 </head>
 
 <body>
