--- a/index.html
+++ b/index.html
@@ -34,5 +34,12 @@
       <div class="start-button"><button type="button" class="start-button" onclick="location.href='rules_long.html';"> Test pełny (200 pytań) [w opracowaniu]</button></div>
     </center>
   </div>
+  <div class="linkbar" id="myLinkbar">
+  <p>Zespół AllValues 2020</p> |
+  <a href="facebook.com/AllValues">Facebook</a> |
+  <a href="github.com/all-values/all-values">GitHub</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+  </div>
+</div>
 </body>
-<html>
+</html>
