--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
     </center>
   </div>
   <div class="linkbar" id="myLinkbar">
-  <p>Zespół AllValues 2020</p> |
+  Zespół AllValues 2020 | 
   <a href="facebook.com/AllValues">Facebook</a> |
-  <a href="github.com/all-values/all-values">GitHub</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    <a href="github.com/all-values/all-values">GitHub</a>
   </div>
 </div>
 </body>
