--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     </center>
   </div>
   <div class="linkbar" id="myLinkbar">
-  Zespół AllValues 2020 | 
-  <a href="facebook.com/AllValues">Facebook</a> |
+    <center>
+    Zespół AllValues 2020 | 
+    <a href="facebook.com/AllValues">Facebook</a> |
     <a href="github.com/all-values/all-values">GitHub</a>
+    </center>
   </div>
 </div>
 </body>
