--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <div class="linkbar" id="myLinkbar">
     <center>
     Zespół AllValues 2020 | 
-    <a href="facebook.com/AllValues">Facebook</a> |
-    <a href="github.com/all-values/all-values">GitHub</a>
+    <a rel="noopener noreferrer" target="_blank" href="facebook.com/AllValues">Facebook</a> |
+    <a rel="noopener noreferrer" target="_blank" href="github.com/all-values/all-values">GitHub</a>
     </center>
   </div>
 </div>
