--- a/404.html
+++ b/404.html
@@ -27,5 +27,12 @@
       <p>Sprawdź poprawność adresu lub <a href="/all-values">wróć na stronę główną</a>.</p>
     </center>
   </div>
+  <div class="linkbar" id="myLinkbar">
+    <center>
+    Zespół AllValues 2020 | 
+    <a rel="noopener noreferrer" target="_blank" href="facebook.com/AllValues">Facebook</a> |
+    <a rel="noopener noreferrer" target="_blank" href="github.com/all-values/all-values">GitHub</a>
+    </center>
+  </div>
 </body>
 <html>
