--- a/rules_long.html
+++ b/rules_long.html
@@ -33,5 +33,12 @@
     <div class="start-button"><button type="button" onclick="location.href='https://all-values.github.io/all-values';" style="{ background-color: #ff6666; }">Rezygnuję, zabierz mnie stąd.</button></div>
     <center>
   </div>
+  <div class="linkbar" id="myLinkbar">
+    <center>
+    Zespół AllValues 2020 | 
+    <a rel="noopener noreferrer" target="_blank" href="facebook.com/AllValues">Facebook</a> |
+    <a rel="noopener noreferrer" target="_blank" href="github.com/all-values/all-values">GitHub</a>
+    </center>
+  </div>
 </body>
 <html>
