--- a/quiz_short.html
+++ b/quiz_short.html
@@ -35,6 +35,13 @@
     <button class="small_button_off" onclick="prev_question()" id="back_button_off">Cofnij</button>
     <center>
   </div>
+  <div class="linkbar" id="myLinkbar">
+    <center>
+    Zespół AllValues 2020 | 
+    <a rel="noopener noreferrer" target="_blank" href="facebook.com/AllValues">Facebook</a> |
+    <a rel="noopener noreferrer" target="_blank" href="github.com/all-values/all-values">GitHub</a>
+    </center>
+  </div>
   
   <script>
     var max_econ, max_dipl, max_govt, max_scty, max_revo; // Max possible scores
