--- a/404.html
+++ b/404.html
@@ -30,8 +30,8 @@
   <div class="linkbar" id="myLinkbar">
     <center>
     Zespół AllValues 2020 | 
-    <a rel="noopener noreferrer" target="_blank" href="facebook.com/AllValues">Facebook</a> |
-    <a rel="noopener noreferrer" target="_blank" href="github.com/all-values/all-values">GitHub</a>
+    <a rel="noopener noreferrer" target="_blank" href="http://facebook.com/AllValues">Facebook</a> |
+    <a rel="noopener noreferrer" target="_blank" href="http://github.com/all-values/all-values">GitHub</a>
     </center>
   </div>
 </body>
