--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
   </div>
   <div class="panel">
     <center>
-      <div class="start-button"><button type="button" class="start-button" onclick="location.href='rules_short.html';">Test uproszczony (50 pytań)</button></div>
+      <div class="button"><button type="button" class="start-button" onclick="location.href='rules_short.html';">Test uproszczony (50 pytań)</button></div>
       <br/>
-      <div class="start-button"><button type="button" class="start-button" onclick="location.href='rules_long.html';"> Test pełny (200 pytań) [w opracowaniu]</button></div>
+      <div class="button"><button type="button" class="start-button" onclick="location.href='rules_long.html';"> Test pełny (200 pytań) [w opracowaniu]</button></div>
     </center>
   </div>
   <div class="linkbar" id="myLinkbar">
