--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </div>
   <div class="heading">
     <center>
-      <h1>AllValues</h1>
-      <p>Nowy, lepszy test polityczny.</p>
+      <h1 style="font-size: 45pt;">AllValues</h1>
+      <p style="font-size: 20pt;">Nowy, lepszy test polityczny.</p>
     </center>
   </div>
   <div class="panel">
