--- a/rules_short.html
+++ b/rules_short.html
@@ -23,14 +23,14 @@
   </div>
   <div class="ruleset">
     <center><p>
-    Za chwilę zobaczysz serię pytań dotyczących Twoich poglądów.
-    Odpowiadaj zgodnie z przekonaniami. 
-    Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane.
+    Za chwilę zobaczysz serię pytań dotyczących Twoich poglądów. <br>
+    Odpowiadaj zgodnie z przekonaniami. <br>
+    Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane. <br>
     </p>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='quiz_short.html';" class="small-button" style="background-color: #e6f9ff;">Rozumiem, chcę przejść do testu.</button></div>
+    <div class="start-button"><button onclick="location.href='quiz_short.html';" class="small-button" style="background-color: #e6f9ff;">Rozumiem, chcę przejść do testu.</button></div>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='https://all-values.github.io/all-values';" class="small-button" style="background-color: 
+    <div class="start-button"><button onclick="location.href='https://all-values.github.io/all-values';" class="small-button" style="background-color: 
       #ff6666;">Rezygnuję, zabierz mnie stąd.</button></div>
     <center>
   </div>
