--- a/rules_long.html
+++ b/rules_long.html
@@ -23,14 +23,14 @@
   </div>
   <div class="ruleset">
     <center><p>
-    Za chwilę zobaczysz serię pytań dotyczących Twoich poglądów.
-    Odpowiadaj zgodnie z przekonaniami. 
-    Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane.
+    Za chwilę zobaczysz serię pytań dotyczących Twoich poglądów. <br>
+    Odpowiadaj zgodnie z przekonaniami. <br>
+    Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane. <br>
     </p>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='quiz_long.html';" class="small-button">Rozumiem, chcę przejść do testu.</button></div>
+    <div class="start-button"><button type="button" onclick="location.href='quiz_long.html';" class="small_button">Rozumiem, chcę przejść do testu.</button></div>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='https://all-values.github.io/all-values';" class="small-button">Rezygnuję, zabierz mnie stąd.</button></div>
+    <div class="start-button"><button type="button" onclick="location.href='https://all-values.github.io/all-values';" class="small_button">Rezygnuję, zabierz mnie stąd.</button></div>
     <center>
   </div>
   <div class="linkbar" id="myLinkbar">
