--- a/quiz_short.html
+++ b/quiz_short.html
@@ -23,8 +23,8 @@
   </div>
   <div>
     <center>
-    <h2 style="text-align:center;" id="question-number"></h2>
-    <p class="question" id="question-text" style="background-color: #e6f3ff;"></p>
+    <h2 style="text-align:center;" id="question-number">Ładowanie...</h2>
+    <p class="question" id="question-text" style="background-color: #e6f3ff;">Ładowanie...</p>
     <button class="button" onclick="next_question( 1.0)" style="background-color: #00ff00;">Zdecydowanie się zgadzam</button> <br>
     <button class="button" onclick="next_question( 0.5)" style="background-color: #b3ffb3;">Zgadzam się</button> <br>
     <button class="button" onclick="next_question( 0.0)">Nie mam zdania</button> <br>
@@ -32,7 +32,7 @@
     <button class="button" onclick="next_question(-1.0)" style="background-color: #ff0000;">Zdecydowanie się nie zgadzam</button> <br>
     <button class="small_button" onclick="prev_question()" id="back_button">Cofnij</button><br>
     <button class="small_button_off" onclick="prev_question()" id="back_button_off">Cofnij</button>
-    <center>
+    </center>
   </div>
   <div class="linkbar" id="myLinkbar">
     <center>
@@ -59,8 +59,8 @@
         max_revo += Math.abs(questions[i].effect.revo)
     }
     function init_question() {
-        document.getElementById("question-text").innerHTML = questions[qn].question;
-        document.getElementById("question-number").innerHTML = "Pytanie " + (qn + 1) + " z " + (questions.length);
+        document.getElementById("question-text").innerHTML = /*questions[qn].question;*/ "Polak";
+        document.getElementById("question-number").innerHTML = /*"Pytanie " + (qn + 1) + " z " + (questions.length);*/ "Papież";
         if (prev_answer == null) {
             document.getElementById("back_button").style.display = 'none';
             document.getElementById("back_button_off").style.display = 'block';
