--- a/quiz_short.html
+++ b/quiz_short.html
@@ -42,7 +42,7 @@
     </center>
   </div>
   
-  <script type="application/javascript" src="https://all-values.github.io/all-values/Scripts/questions_short.js"></script>
+  <script type="application/javascript" src="Scripts/questions_short.js"></script>
   <script>
     var max_econ, max_dipl, max_govt, max_scty, max_revo; // Max possible scores
     max_econ = max_dipl = max_govt = max_scty = max_revo = 0;
