--- a/rules_short.html
+++ b/rules_short.html
@@ -22,7 +22,7 @@
     </a>
   </div>
   <div class="ruleset">
-    <center><p>
+    <center><p style="font-size: 20pt; padding-top: 10px;">
     Za chwilę zobaczysz serię pytań dotyczących Twoich poglądów. <br>
     Odpowiadaj zgodnie z przekonaniami. <br>
     Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane. <br>
