--- a/quiz_short.html
+++ b/quiz_short.html
@@ -25,11 +25,11 @@
     <center>
     <h2 style="text-align:center;" id="question-number">Ładowanie...</h2>
     <p class="question" id="question-text" style="background-color: #e6f3ff;">Ładowanie...</p>
-    <button class="button" onclick="next_question( 1.0)" style="background-color: #00ff00;">Zdecydowanie się zgadzam</button> <br>
-    <button class="button" onclick="next_question( 0.5)" style="background-color: #b3ffb3;">Zgadzam się</button> <br>
+    <button class="button" onclick="next_question( 1.0)" style="background-color: #33ff33;">Zdecydowanie się zgadzam</button> <br>
+    <button class="button" onclick="next_question( 0.5)" style="background-color: #ccffcc;">Zgadzam się</button> <br>
     <button class="button" onclick="next_question( 0.0)">Nie mam zdania</button> <br>
-    <button class="button" onclick="next_question(-0.5)" style="background-color: #ffb3b3;">Nie zgadzam się</button> <br>
-    <button class="button" onclick="next_question(-1.0)" style="background-color: #ff0000;">Zdecydowanie się nie zgadzam</button> <br>
+    <button class="button" onclick="next_question(-0.5)" style="background-color: #ffcccc;">Nie zgadzam się</button> <br>
+    <button class="button" onclick="next_question(-1.0)" style="background-color: #ff3333;">Zdecydowanie się nie zgadzam</button> <br>
     <button class="small_button" onclick="prev_question()" id="back_button">Cofnij</button><br>
     <button class="small_button_off" onclick="prev_question()" id="back_button_off">Cofnij</button>
     </center>
