--- a/quiz_short.html
+++ b/quiz_short.html
@@ -21,10 +21,10 @@
     <i class="fa fa-bars"></i>
     </a>
   </div>
-  <div style="bakcground-color: 555555;">
+  <div style="bakcground-color: #555555;">
     <center>
     <h2 style="text-align:center;" id="question-number" style="background-color: #555555;">Ładowanie...</h2>
-    <p class="question" id="question-text" style="background-color: #e6f3ff;">Ładowanie...</p>
+    <p class="question" id="question-text" style="background-color: #e6f3ff; font-size: 16pt;">Ładowanie...</p>
     <button class="button" onclick="next_question( 1.0)" style="background-color: #77ff77;">Zdecydowanie się zgadzam</button> <br>
     <button class="button" onclick="next_question( 0.5)" style="background-color: #ccffcc;">Zgadzam się</button> <br>
     <button class="button" onclick="next_question( 0.0)">Nie mam zdania</button> <br>
