--- a/rules_short.html
+++ b/rules_short.html
@@ -28,9 +28,9 @@
     Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane. <br>
     </p>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='quiz_short.html';" class="small_button" style="background-color: #e6f9ff;">Rozumiem, chcę przejść do testu.</button></div>
+    <div class="start-button"><button type="button" onclick="location.href='quiz_short.html';" class="button" style="background-color: #e6f9ff;">Rozumiem, chcę przejść do testu.</button></div>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='https://all-values.github.io/all-values';" class="small_button" style="background-color: 
+    <div class="start-button"><button type="button" onclick="location.href='https://all-values.github.io/all-values';" class="button" style="background-color: 
       #ff6666;">Rezygnuję, zabierz mnie stąd.</button></div>
     <center>
   </div>
