--- a/rules_long.html
+++ b/rules_long.html
@@ -22,15 +22,16 @@
     </a>
   </div>
   <div class="ruleset">
-    <center><p>
+    <center><p style="font-size: 20pt; padding-top: 10px;">
     Za chwilę zobaczysz serię pytań dotyczących Twoich poglądów. <br>
     Odpowiadaj zgodnie z przekonaniami. <br>
     Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane. <br>
     </p>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='quiz_long.html';" class="small_button">Rozumiem, chcę przejść do testu.</button></div>
+    <div class="start-button"><button type="button" onclick="location.href='quiz_short.html';" class="button" style="background-color: #e6f9ff;">Rozumiem, chcę przejść do testu.</button></div>
     <br>
-    <div class="start-button"><button type="button" onclick="location.href='https://all-values.github.io/all-values';" class="small_button">Rezygnuję, zabierz mnie stąd.</button></div>
+    <div class="start-button"><button type="button" onclick="location.href='https://all-values.github.io/all-values';" class="button" style="background-color: 
+      #ff6666;">Rezygnuję, zabierz mnie stąd.</button></div>
     <center>
   </div>
   <div class="linkbar" id="myLinkbar">
