--- a/rules_short.html
+++ b/rules_short.html
@@ -23,7 +23,7 @@
   </div>
   <div class="ruleset">
     <center><p style="font-size: 20pt; padding-top: 10px;">
-    Za chwilę zobaczysz serię pytań dotyczących Twoich poglądów. <br>
+    Za chwilę zobaczysz serię 50 pytań dotyczących Twoich poglądów. <br>
     Odpowiadaj zgodnie z przekonaniami. <br>
     Udział w teście jest dobrowolny, a wyniki nie są nigdzie zapisywane. <br>
     </p>
