--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <center>
       <div class="start-button"><button type="button" class="button" onclick="location.href='rules_short.html';">Test uproszczony (50 pytań)</button></div>
       <br/>
-      <div class="start-button"><button type="button" class="button" onclick="location.href='rules_long.html';"> Test pełny (200 pytań) [w opracowaniu]</button></div>
+      <div class="start-button"><button type="button" class="button" onclick="location.href='rules_long.html';">Test pełny (200 pytań) [w opracowaniu]</button></div>
+      <br/>
+      <div class="start-button-small"><button type="button" class="button" onclick="location.href='forbidden_test.html';">Zabroniony test (???)</button></div>
     </center>
   </div>
   <div class="linkbar" id="myLinkbar">
