--- a/quiz_short.html
+++ b/quiz_short.html
@@ -43,7 +43,7 @@
   </div>
   
   <script type="application/javascript" src="Scripts/questions_short.js"></script>
-  <script>
+  <script type="text/javascript">
     var max_econ, max_dipl, max_govt, max_scty, max_revo; // Max possible scores
     max_econ = max_dipl = max_govt = max_scty = max_revo = 0;
     var econ, dipl, govt, scty, revo; // User's scores
