--- a/results_short.html
+++ b/results_short.html
@@ -44,7 +44,7 @@
   </div>
 </div>
 <script type="text/javascript">
-getElementById("results").innerHtml = "Oś ekonomiczna: " + getQueryVariable("e") + "<br/> Oś społeczna: " + getQueryVariable("s") + "<br/> Oś rewolucji: " + getQueryVariable("r") + "<br/> Oś rządu: " + getQueryVariable("g") + "<br/> Oś dyplomatyczna: " + getQueryVariable("d")
+document.getElementById("results").innerHtml = "Oś ekonomiczna: " + getQueryVariable("e") + "<br/> Oś społeczna: " + getQueryVariable("s") + "<br/> Oś rewolucji: " + getQueryVariable("r") + "<br/> Oś rządu: " + getQueryVariable("g") + "<br/> Oś dyplomatyczna: " + getQueryVariable("d")
 </script>
 </body>
 </html>
