--- a/results_short.html
+++ b/results_short.html
@@ -44,6 +44,16 @@
   </div>
 </div>
 <script type="text/javascript">
+function getQueryVariable(variable)
+  {
+         var query = window.location.search.substring(1)
+         var vars = query.split("&")
+         for (var i=0;i<vars.length;i++) {
+                 var pair = vars[i].split("=")
+                 if(pair[0] == variable) {return pair[1]}
+         }
+         return(NaN);
+ }
 document.getElementById("results").innerHtml = "Oś ekonomiczna: " + getQueryVariable("e") + "<br/> Oś społeczna: " + getQueryVariable("s") + "<br/> Oś rewolucji: " + getQueryVariable("r") + "<br/> Oś rządu: " + getQueryVariable("g") + "<br/> Oś dyplomatyczna: " + getQueryVariable("d")
 </script>
 </body>
