--- a/results_short.html
+++ b/results_short.html
@@ -54,7 +54,7 @@ function getQueryVariable(variable)
          }
          return(NaN);
  }
-document.getElementById("results").innerHtml = "Oś ekonomiczna: " + getQueryVariable("e") + "<br/> Oś społeczna: " + getQueryVariable("s") + "<br/> Oś rewolucji: " + getQueryVariable("r") + "<br/> Oś rządu: " + getQueryVariable("g") + "<br/> Oś dyplomatyczna: " + getQueryVariable("d")
+document.getElementById("results").innerHTML = "Oś ekonomiczna: " + getQueryVariable("e") + "<br/> Oś społeczna: " + getQueryVariable("s") + "<br/> Oś rewolucji: " + getQueryVariable("r") + "<br/> Oś rządu: " + getQueryVariable("g") + "<br/> Oś dyplomatyczna: " + getQueryVariable("d")
 </script>
 </body>
 </html>
