--- a/quiz_short.html
+++ b/quiz_short.html
@@ -100,7 +100,7 @@
 
     }
     function calc_score(score,max) {
-        return (20*(max+score)/(2*max)).toFixed(1);
+        return ((max+score)/(max)).toFixed(1);
     }
     function results() {
         location.href = `results_short.html`
