--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   </div>
   <div class="panel">
     <center>
-      <div class="start-button"><button type="button" class="button" onclick="location.href='rules_short.html';">Test uproszczony (50 pytań)</button></div>
+      <div class="start-button"><button type="button" class="button" onclick="location.href='rules_short.html';">Test główny (50 pytań)</button></div>
       <br/>
-      <div class="start-button"><button type="button" class="button" onclick="location.href='rules_long.html';">Test pełny (200 pytań) [w opracowaniu]</button></div>
-      <br/>
-      <div class="start-button"><button type="small_button" class="button" onclick="location.href='forbidden_test.html';">Zabroniony test (???)</button></div>
+      <!---<div class="start-button"><button type="button" class="button" onclick="location.href='rules_long.html';">Test rozszerzony (200 pytań) [w opracowaniu]</button></div>
+      <br/>--->
+      <div class="start-button"><button type="button" class="small_button" onclick="location.href='forbidden_test.html';">Zabroniony test (???)</button></div>
     </center>
   </div>
   <div class="linkbar" id="myLinkbar">
