--- a/results_short.html
+++ b/results_short.html
@@ -21,20 +21,32 @@
     <i class="fa fa-bars"></i>
     </a>
   </div>
+  <center>
   <div id="results"></div>
   <div id="explanations">
   <h1>Wyjaśnienie idei</h1><br/>
   <h2>Socjalizm</h2><br/>
+  <p>W tym teście, socjalizm odnosi się do szerokeigo spektrum idei związanych z równością ekonomiczną. Obejmuje poglądy od państwa opiekuńczego do całkowitego uspołecznienia gospodarki. Ci, którzy popierają tę ideę, widzą w szerokiej interwencji władzy drogę do poprawy sytuacji gospodarczej obywateli.</p><br/>
   <h2>Kapitalizm</h2><br/>
+  <p>Kapitalizm to ogół poglądów wolnorynkowych. Ci, którzy popierają tę ideę, wierzą w siłę wolnego rynku jako najlepszego rozwiązania problemów gospodarczych, niekoniecznie wykluczając przy tym całkowicie interwencję państwa w rynek.</p><br/> 
   <h2>Progresywizm</h2><br/>
+  <p>Progresywizm to skupienie na zmianach w społeczeństwie. Jego zwolennicy wspierają względnie nowe idee, takie jak legalizacja pracy seksualnej lub ugruntowanie praw osób LGBT.</p><br/>
   <h2>Konserwatyzm</h2><br/>
-  <h2>Rewolucjnizm</h2></br>
+    <p>Konserwatyści to zwolennicy tradycji. Zazwyczaj są niechętni wobec zmian. Cenią rodzinę i zwyczaje. Większość z nich jest przywiązana do jednej z większych religii.</p><br/>
+  <h2>Rewolucjonizm</h2></br>
+  <p>Rewolucjonizm to pogląd uznający konieczność dokonania znacznych zmian w społeczeństwie w dość krótkiej perspektywie. Zwolennicy tej idei wierzą, że rozwiązanie problemów państwa wymaga radykalnego działania, czasami również wiążącego się z przemocą, niezależnie od tego, jaka będzie reakcja społeczeństwa.</p><br/>
   <h2>Reformizm</h2></br>
+  <p>Reformizm jest przeciwieństwem rewolucjonizmu. Jego zwolennicy uważają, że wszelkie konieczne zmiany powinny być dokonywane stopniowo, zgodnie z możliwościami państwa i ewolucją nastrojów w społeczeństwie.</p><br/>
   <h2>Swoboda</h2></br>
+  <p>Idea ta oznacza niezależność ludzi od władzy. Jej zwolennicy uważają, że wszyscy powinni mieć możliwość działania wedle własnej woli i bez zbędnej kontroli ze strony władzy, czasami włącznie z działaniem na szkodę innych.</p><br/> 
   <h2>Kontrola</h2></br>
+  <p>Ta idea wiąże się z istnieniem kontroli władzy nad życiem ludzi, zwykle motywowanej bezpieczeństwem ogółu. Może mieć wiele postaci, od istnienia państwowych licencji wymaganych do pewnych działań aż do całkowitejh kontroli nad każdym aspektem życia.</p><br/>
   <h2>Kosmopolityzm</h2></br>
-  <h2>Nacjonalizm</h2>
+  <p>Kosmopolita to obywatel świata. Zwolennicy tej idei uważają granice państw i podziały narodowe za mało istotne, a zamiast tego wspierają takie działania, jak organizacje międzynarodowe, handel międzynarodowy i integracja kulturowa.</p><br/>
+  <h2>Nacjonalizm</h2><br/>
+  <p>Nacjonalista ponad wszsytko ceni swój naród. Przyszłość widzi w samowystarczalności i niezależności swojego państwa. Jest niechętny wobec przybyszów i zwykle nie wspiera współpracy z innymi narodami.</p><br/>
   </div>
+  </center>
   <div class="linkbar" id="myLinkbar">
     <center>
     Zespół AllValues 2021 | 
