--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <br/>
       <!---<div class="start-button"><button type="button" class="button" onclick="location.href='rules_long.html';">Test rozszerzony (200 pytań) [w opracowaniu]</button></div>
       <br/>--->
-      <div class="start-button"><button type="button" class="small_button" onclick="location.href='forbidden_test.html';">Zabroniony test (???)</button></div>
+      <div class="start-button"><button type="button" class="small_button" onclick="location.href='rules_forbidden.html';">Zabroniony test (???)</button></div>
     </center>
   </div>
   <div class="linkbar" id="myLinkbar">
