--- a/quiz_forbidden.html
+++ b/quiz_forbidden.html
@@ -90,8 +90,8 @@
         return ((score/max)*100).toFixed(1);
     }
     function results() {
-        location.href = `results_short.html`
-            + `?s=${calc_score(econ,max_econ)}`
+        location.href = `results_forbidden.html`
+            + `?s=${calc_score(score,max_score)}`
     }
 </script>
   
